DuPont DevSB/src/objects/Idea__c.object
<CustomObject>
    <description>This Object is to capture Ideas, requirements and questions</description>
    <fields>
        <fullName>Added_to_Backlog__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select if the record was accepted and a Story was created and added to the Product Backlog</description>
        <label>Added to Backlog</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Reviewed__c</fullName>
        <description>the Date the Product Owner reviewed the record</description>
        <label>Date Reviewed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of Idea, Requirement, Suggestion</description>
        <inlineHelpText>Please describe what you are presenting if a requirement include persona and what the expected outcome would be</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Idea_Number__c</fullName>
        <description>Identifies number of the record for tracking</description>
        <displayFormat>Idea-{0000}</displayFormat>
        <label>Idea Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Idea_Type__c</fullName>
        <description>to identify if you are entering a requirement, idea or suggestion</description>
        <label>Idea Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Requirement</fullName>
                </value>
                <value>
                    <fullName>Idea</fullName>
                </value>
                <value>
                    <fullName>Suggestion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product Owner of the backlog the Requirement, Suggestion or Idea is fofr</description>
        <label>Product Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Ideas1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reviewed_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Product Owner that Reviewed the Record</description>
        <label>Reviewed by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Ideas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scrum_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scrum Team</label>
        <referenceTo>agf__ADM_Scrum_Team__c</referenceTo>
        <relationshipLabel>Ideas</relationshipLabel>
        <relationshipName>Ideas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status Values</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>What the idea, requirement or suggestion is about example: Would like to have the Product owner default to Annick</description>
        <label>Subject</label>
        <type>TextArea</type>
    </fields>
    <label>Idea</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Idea Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ideas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>